# homework

./: .gitignore  m11-6.sln
m11-6/: m11-6.sln
m11-6-4/: m11-6-4.vcxproj
m11-6/m11-6-1/: m11-6-1.vcxproj  main.cpp
m11-6/m11-6-2/: m11-6-2.vcxproj  main.cpp  main.h
m11-6/m11-6-3/: m11-6-3.vcxproj  main.cpp
m11-6/m11-6-4/: main.cpp  main.h
m12-5/: m12-5.sln
m12-5/m12-5-2/: m12-5-2.vcxproj  main.cpp
m12-5/m12-5-3/: m12-5-3.vcxproj  main.cpp
m13-6/: m13-6.sln
m13-6/m13-6-1/: m13-6-1.vcxproj  main.cpp
m13-6/m13-6-2/: m13-6-2.vcxproj  main.cpp
m13-6/m13-6-3/: m13-6-3.vcxproj  main.cpp
m14-6/: m14-6.sln
m14-6/m14-6-1/: m14-6-1.vcxproj  main.cpp
m14-6/m14-6-2/: m14-6-2.vcxproj  main.cpp  utils.cpp  utils.h
m14-6/m14-6-3/: m14-6-3.vcxproj  main.cpp
m14-6/m14-6-4/: m14-6-4.vcxproj  main.cpp
m14-6/m14-6-5/: m14-6-5.vcxproj  main.cpp  utils.cpp  utils.h
m15-6/: m15-6.sln
m15-6/m15-6-1/: m15-6-1.vcxproj  main.cpp
m15-6/m15-6-2/: m15-6-2.vcxproj  main.cpp
m15-6/m15-6-3/: m15-6-3.vcxproj  main.cpp
m15-6/m15-6-4/: m15-6-4.vcxproj  main.cpp
m16-6/: m16-6.sln
m16-6/m16-6-1/: m16-6-1.vcxproj  main.cpp
m16-6/m16-6-2/: m16-6-2.vcxproj  main.cpp
m16-6/m16-6-3/: m16-6-3.vcxproj  (+1 more)
m17-4/: m17-4.sln
m18-5/: m18-5.sln
m19-5/: m19-5.sln
m20-5/: m20-5.sln
m21-5/: m21-5.sln
m24-5/m24-5-1/: CMakeLists.txt
m24-5/m24-5-1/src/: logic.cpp  logic.h  main.cpp
m25-4/m25-4-2/: CMakeLists.txt
m25-4/m25-4-2/include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
m25-4/m25-4-2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
(+112 files in other folders)
